[gd_scene load_steps=7 format=2]

[ext_resource path="res://World/Bush.png" type="Texture" id=1]
[ext_resource path="res://Shadows/LargeShadow.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Interactable.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/Bush.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 16.0

[sub_resource type="CircleShape2D" id=2]
radius = 18.0278

[node name="Bush" type="StaticBody2D"]
script = ExtResource( 4 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0, 3 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource( 1 )

[node name="Interactable" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="Interactable" index="0"]
shape = SubResource( 2 )
[connection signal="HasBushOn" from="." to="." method="_on_Bush_HasBushOn"]
[connection signal="area_entered" from="Interactable" to="." method="_on_Interactable_area_entered"]
[connection signal="area_exited" from="Interactable" to="." method="_on_Interactable_area_exited"]

[editable path="Interactable"]
